# edu_game-dev

./: .gitignore  index.html
bevy_egine/: Cargo.toml
bevy_egine/src/: main.rs
js/: canvas.js  excalibur.js  index.js
styles/: styles.css
