[package]
name = "bevy_egine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "=0.22.0", features = ["libloading", "provisional", "window"] }
anyhow = "1.0.75"
log = "0.4.20"
cgmath = "0.18.0"
png = "0.17.10"
pretty_env_logger = "0.5.0"
thiserror = "1.0.50"
tobj = { version = "4.0.0", features = ["log"] }
winit = "0.29.3"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3